--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -63,8 +63,8 @@ parameters:
 
         help.scripting:
             method: 'GET'
-            route: '/help/deployment-scripting'
-            stack: ['help.deployment_scripting.page']
+            route: '/help/scripting'
+            stack: ['help.scripting.page']
 
         help.setup:
             method: 'GET'
