--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -379,14 +379,14 @@ parameters:
             route: '/applications/{application:%r.digit%}/build[/environment/{environment:%r.digit%}]'
             stack: ['middleware.signed_in', 'middleware.require_entity', 'build.start.middleware', 'build.start.page']
 
-        builds.list.page1:
+        builds.history.page1:
             method: 'GET'
             route: '/builds'
-            stack: ['middleware.signed_in', 'builds.list.page']
-        builds.list:
+            stack: ['middleware.signed_in', 'builds.history.page']
+        builds.history:
             method: 'GET'
             route: '/builds/page/{page:%r.digit%}'
-            stack: ['middleware.signed_in', 'builds.list.page']
+            stack: ['middleware.signed_in', 'builds.history.page']
 
         ################################################################################################################
         # Release ROUTES
@@ -402,15 +402,15 @@ parameters:
             route: '/builds/{build:%r.build%}/release'
             stack: ['middleware.signed_in', 'middleware.require_entity', 'deploy.select_environment.middleware', 'deploy.middleware', 'release.start.page']
 
-        releases.list.page1:
+        releases.history.page1:
             method: 'GET'
             route: '/releases'
-            stack: ['middleware.signed_in', 'releases.list.page']
+            stack: ['middleware.signed_in', 'releases.history.page']
 
-        releases.list:
+        releases.history:
             method: 'GET'
             route: '/releases/page/{page:%r.digit%}'
-            stack: ['middleware.signed_in', 'releases.list.page']
+            stack: ['middleware.signed_in', 'releases.history.page']
 
         ################################################################################################################
         # ADMIN ROUTES
