--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "ext-pdo":            "*",
         "ext-pdo_mysql":      "*",
         "ext-pdo_sqlite":     "*",
+        "ext-sodium":         "~2.0",
         "ext-xmlwriter":      "*",
 
         "doctrine/orm":             "~2.5.6",
@@ -59,12 +60,12 @@
     "require-dev": {
         "symfony/process":              "~3.3",
         "symfony/var-dumper":           "~3.3",
-        "overtrue/phplint":             "~0.2",
-        "squizlabs/php_codesniffer":    "~3.0"
-    },
 
-    "suggests": {
-        "ext-libsodium": "~1.0",
-        "ext-sodium": "~2.0"
+        "overtrue/phplint":             "~1.0",
+        "phpstan/phpstan":              "~0.9",
+        "squizlabs/php_codesniffer":    "~3.0",
+
+        "mockery/mockery":           "~1.0",
+        "phpunit/phpunit":           "~6.2"
     }
 }
