--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,6 +3,8 @@
 
     <rule ref="PSR2">
         <exclude name="Squiz.WhiteSpace.ControlStructureSpacing.SpacingBeforeClose"/>
+        <exclude name="PSR2.ControlStructures.ControlStructureSpacing.SpacingAfterOpenBrace"/>
+        <exclude name="PSR2.Namespaces.UseDeclaration.MultipleDeclarations"/>
     </rule>
 
     <exclude-pattern type="relative">^tests/*</exclude-pattern>
