--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,11 +10,12 @@
         forceCoversAnnotation="false"
         mapTestClassNameToCoveredClassName="true"
         processIsolation="false"
+        printerClass="Codedungeon\PHPUnitPrettyResultPrinter\Printer"
 
-        stopOnError="true"
-        stopOnFailure="true"
-        stopOnIncomplete="true"
-        stopOnSkipped="true"
+        stopOnError="false"
+        stopOnFailure="false"
+        stopOnIncomplete="false"
+        stopOnSkipped="false"
 
         beStrictAboutTestsThatDoNotTestAnything="false"
         beStrictAboutOutputDuringTests="true"
